--- a/Trabajos/Avatar juego/avatar.html
+++ b/Trabajos/Avatar juego/avatar.html
@@ -1,98 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>LA LEYENDA DE AANG: AVATAR</title>
-    </head>
-    <body>
-        <h1>AVATAR 🔥 💧 🌱 🍸</h1>
+<head>
+    <meta charset="utf-8" />
+    <title>LA LEYENDA DE AANG: AVATAR</title>
+</head>
+<body>
+    <h1>AVATAR 🔥 💧 🌱 🍸</h1>
 
-        <section id="seleccionar-personaje">
-            <h2>Elige tu Personaje</h2>
+    <section id="seleccionar-personaje">
+        <h2>Elige tu Personaje</h2>
 
-            <label for="zuko">Zuko</label>
-            <input type="radio" name="personaje" id="zuko" value="Zuko" />
+        <label for="zuko">Zuko</label>
+        <input type="radio" name="personaje" id="zuko" value="Zuko" />
 
-            <label for="katara">Katara</label>
-            <input type="radio" name="personaje" id="katara" value="Katara" />
+        <label for="katara">Katara</label>
+        <input type="radio" name="personaje" id="katara" value="Katara" />
 
-            <label for="aang">Aang</label>
-            <input type="radio" name="personaje" id="aang" value="Aang" />
+        <label for="aang">Aang</label>
+        <input type="radio" name="personaje" id="aang" value="Aang" />
 
-            <label for="toph">Toph</label>
-            <input type="radio" name="personaje" id="toph" value="Toph" />
+        <label for="toph">Toph</label>
+        <input type="radio" name="personaje" id="toph" value="Toph" />
 
-            <button id="boton-personaje">Seleccionar</button>
-        </section>
+        <button id="boton-personaje">Seleccionar</button>
+    </section>
 
-        <section id="seleccionar-ataque">
-            <h2>Elige tu ataque</h2>
-            <p>Tu personaje <span id="personaje-jugador"></span> tiene <span>3</span> vidas</p>
-            <p>El personaje <span id="personaje-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
-            <p>
-                <button>Fuego 🔥</button>
-                <button>Agua 💧</button>
-                <button>Tierra 🌱</button>
-                <button>Aire 🍸</button>
-            </p>
-        </section>
+    <section id="seleccionar-ataque">
+        <h2>Elige tu ataque</h2>
+        <p>Tu personaje <span id="personaje-jugador"></span> tiene <span>3</span> vidas</p>
+        <p>El personaje <span id="personaje-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
+        <p>
+            <button>Fuego 🔥</button>
+            <button>Agua 💧</button>
+            <button>Tierra 🌱</button>
+            <button>Aire 🍸</button>
+        </p>
+    </section>
 
-        <section id="mensajes">
-            <p>Tu personaje atacó con todo el poder del FUEGO, el personaje del enemigo atacó con el medio poder de la TIERRA - GANASTE</p>
-        </section>
+    <section id="mensajes">
+        <p>Tu personaje atacó con todo el poder del FUEGO, el personaje del enemigo atacó con el medio poder de la TIERRA - GANASTE</p>
+    </section>
 
-        <section id="reiniciar">
-            <button>Reiniciar</button>
-        </section>
+    <section id="reiniciar">
+        <button>Reiniciar</button>
+    </section>
 
-        <script>
-            function iniciarJuego() {
-                let botonPersonajeJugador = document.getElementById("boton-personaje");
-                botonPersonajeJugador.addEventListener("click", seleccionarPersonajeJugador);
-            }
-
-            function seleccionarPersonajeJugador() {
-                let inputZuko = document.getElementById('zuko');
-                let inputKatara = document.getElementById('katara');
-                let inputAang = document.getElementById('aang');
-                let inputToph = document.getElementById('toph');
-                let spanPersonajeJugador = document.getElementById('personaje-jugador');
-
-                let personajeSeleccionado = "";
-
-                if (inputZuko.checked) {
-                    personajeSeleccionado = 'Zuko';
-                } else if (inputKatara.checked) {
-                    personajeSeleccionado = 'Katara';
-                } else if (inputAang.checked) {
-                    personajeSeleccionado = 'Aang';
-                } else if (inputToph.checked) {
-                    personajeSeleccionado = 'Toph';
-                } else {
-                    alert('Selecciona un personaje');
-                    return;
-                }
-
-                spanPersonajeJugador.innerHTML = personajeSeleccionado;
-
-                // Cambiar el título de la pestaña
-                document.title = "Tu personaje: " + personajeSeleccionado;
-
-                // Elegir personaje enemigo aleatorio
-                seleccionarPersonajeEnemigo(personajeSeleccionado);
-            }
-
-            function seleccionarPersonajeEnemigo(personajeJugador) {
-                const personajes = ["Zuko", "Katara", "Aang", "Toph"];
-                const personajesDisponibles = personajes.filter(p => p !== personajeJugador);
-                const numeroAleatorio = Math.floor(Math.random() * personajesDisponibles.length);
-                const personajePC = personajesDisponibles[numeroAleatorio];
-
-                let spanEnemigo = document.getElementById("personaje-enemigo");
-                spanEnemigo.innerHTML = personajePC;
-            }
-
-            window.addEventListener("load", iniciarJuego);
-        </script>
-    </body>
+    <script src="avatar.js"></script>
+</body>
 </html>
