--- a/Trabajos/Avatar juego/avatar.html
+++ b/Trabajos/Avatar juego/avatar.html
@@ -30,10 +30,9 @@
         <p>Tu personaje <span id="personaje-jugador"></span> tiene <span>3</span> vidas</p>
         <p>El personaje <span id="personaje-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
         <p>
-            <button>Fuego 🔥</button>
-            <button>Agua 💧</button>
-            <button>Tierra 🌱</button>
-            <button>Aire 🍸</button>
+            <button id="boton-punio">Punio ✊ </button>
+            <button id="boton-patada">Patada 🦶</button>
+            <button id="boton-barrida">Barrida 💨</button>
         </p>
     </section>
 
