Update avatar clase 7

--- a/Trabajos/Avatar juego/avatar.html
+++ b/Trabajos/Avatar juego/avatar.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>LA LEYENDA DE AANG: AVATAR</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>AVATAR 🔥 💧 🌱 🍸</h1>
@@ -22,28 +23,40 @@
         <label for="toph">Toph</label>
         <input type="radio" name="personaje" id="toph" value="Toph" />
 
-        <button id="boton-personaje">Seleccionar</button>
+        <button id="boton-personaje" class="btn-personaje">Seleccionar</button>
     </section>
 
     <section id="seleccionar-ataque">
         <h2>Elige tu ataque</h2>
-        <p>Tu personaje <span id="personaje-jugador"></span> tiene <span>3</span> vidas</p>
-        <p>El personaje <span id="personaje-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu personaje <span id="personaje-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+        <p>El personaje <span id="personaje-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
         <p>
-            <button id="boton-punio">Punio ✊ </button>
-            <button id="boton-patada">Patada 🦶</button>
-            <button id="boton-barrida">Barrida 💨</button>
+            <button class="botones-ataque" id="boton-punio">Punio ✊ </button>
+            <button class="botones-ataque" id="boton-patada">Patada 🦶</button>
+            <button class="botones-ataque" id="boton-barrida">Barrida 💨</button>
         </p>
     </section>
 
     <section id="mensajes">
-        <p>Tu personaje atacó con todo el poder del FUEGO, el personaje del enemigo atacó con el medio poder de la TIERRA - GANASTE</p>
     </section>
 
     <section id="reiniciar">
-        <button>Reiniciar</button>
+        <button id="boton-reiniciar" class="btn-reiniciar">Reiniciar</button>
     </section>
 
+    
+    <button id="toggle-reglas" class="btn-reglas">📜 Ver reglas del juego</button>
+    <section id="seccion-reglas" style="display: none; border: 1px solid #ccc; padding: 10px; margin-top: 10px; border-radius: 6px; background-color: #f9f9f9;">
+    <h3>Reglas del juego</h3>
+    <ul>
+        <li>Debes seleccionar un personaje antes de comenzar.</li>
+        <li>Ambos jugadores (tú y el enemigo) tienen <strong>3 vidas</strong>.</li>
+        <li><strong>Patada</strong> gana a <strong>Punio</strong>.</li>
+        <li><strong>Punio</strong> gana a <strong>Barrida</strong>.</li>
+        <li><strong>Barrida</strong> gana a <strong>Patada</strong>.</li>
+        <li>Si ambos usan el mismo ataque, es un <strong>empate</strong>.</li>
+    </ul>
+    </section>
     <script src="avatar.js"></script>
 </body>
 </html>
